cabal-version:      2.2

name:               clash-lib-hedgehog
version:            1.6.1
synopsis:           Hedgehog Generators for clash-lib
description:        Hedgehog Generators for clash-lib
bug-reports:        https://github.com/clash-lang/clash-compiler/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2021, QBayLogic B.V.
category:           Hardware
build-type:         Simple

common basic-config
  default-language: Haskell2010

  default-extensions:
    BinaryLiterals
    DataKinds
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  if impl(ghc >= 8.6)
    default-extensions:
      NoStarIsType

  ghc-options:
    -Wall -Wcompat

  build-depends:
    base      >= 4.11  && < 5,
    hedgehog  >= 1.0.3 && < 1.1,

library
  import: basic-config
  hs-source-dirs: src

  exposed-modules:
    Clash.Hedgehog.Core.DataCon
    Clash.Hedgehog.Core.Literal
    Clash.Hedgehog.Core.Monad
    Clash.Hedgehog.Core.Name
    Clash.Hedgehog.Core.Term
    Clash.Hedgehog.Core.TyCon
    Clash.Hedgehog.Core.Type
    Clash.Hedgehog.Core.Var
    Clash.Hedgehog.Internal.Bias
    Clash.Hedgehog.Unique

  build-depends:
    containers                >= 0.5.0.0 && < 0.7,
    data-binary-ieee754       >= 0.4.4   && < 0.6,
    fakedata                  >= 1.0.2   && < 1.1,
    ghc-typelits-knownnat     >= 0.7.2   && < 0.8,
    ghc-typelits-natnormalise >= 0.7.2   && < 0.8,
    hedgehog-fakedata         >= 0.0.1.4 && < 0.1,
    mmorph                    >= 1.1.5   && < 1.2,
    mtl                       >= 2.1.2   && < 2.3,
    pretty-show               >= 1.9     && < 2.0,
    primitive                 >= 0.5.0.1 && < 1.0,
    text                      >= 1.2.2   && < 1.4,
    transformers              >= 0.5.2.0 && < 0.7,

    clash-lib                 == 1.6.1,
